--- a/projetinho_2/package.json
+++ b/projetinho_2/package.json
@@ -1,5 +1,12 @@
 {
-  "name": "projetinho_2",
+  "name": "joao",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.6.1",
+    "materialize-css": "^1.0.0-rc.2",
+    "notify-js-legacy": "^0.4.1"
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT"
 }
